--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -84,7 +84,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/et_password_my_profile"
+                        android:id="@+id/et_mobile_my_profile"
                         android:hint="@string/mobile"
                         android:background="@color/white"
                         android:inputType="phone"
@@ -95,7 +95,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btn_sign_up"
+                    android:id="@+id/btn_update"
                     android:layout_gravity="center"
                     android:layout_marginTop="@dimen/my_profile_btn_update_marginTop"
                     android:background="@drawable/shape_button_rounded"
