--- a/app/src/main/res/layout/activity_create_board.xml
+++ b/app/src/main/res/layout/activity_create_board.xml
@@ -41,6 +41,8 @@
                 android:layout_height="wrap_content">
                 
                 <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/iv_board_image"
+                    android:src="@drawable/ic_user_place_holder"
                     android:layout_width="@dimen/board_image_size"
                     android:layout_height="@dimen/board_image_size"/>
 
@@ -57,6 +59,17 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
                 </com.google.android.material.textfield.TextInputLayout>
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_create_board"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/my_profile_btn_update_marginTop"
+                    android:background="@drawable/shape_button_rounded"
+                    android:text="@string/create_board_title"
+                    android:textSize="@dimen/et_text_size"
+                    android:textColor="@color/white"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
