--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -102,4 +102,18 @@
     <dimen name="item_member_email_text_size">14dp</dimen>
     <dimen name="item_member_divider_height">0.3dp</dimen>
     <dimen name="item_member_divider_marginTop">5dp</dimen>
+
+    <!--Dialog member-->
+    <dimen name="dialog_member_cv_elevation">3dp</dimen>
+    <dimen name="dialog_member_cv_cornerRadius">3dp</dimen>
+    <dimen name="dialog_member_content_padding">10dp</dimen>
+    <dimen name="dialog_member_title_padding">5dp</dimen>
+    <dimen name="dialog_member_title_text_size">18dp</dimen>
+    <dimen name="dialog_member_divider_height">1dp</dimen>
+    <dimen name="dialog_member_divider_marginTopBottom">3dp</dimen>
+    <dimen name="dialog_member_email_marginTop">10dp</dimen>
+    <dimen name="dialog_member_action_layout_height">40dp</dimen>
+    <dimen name="dialog_member_action_layout_marginTop">10dp</dimen>
+    <dimen name="dialog_member_action_layout_padding">10dp</dimen>
+    <dimen name="dialog_member_action_layout_text_size">16dp</dimen>
 </resources>
