--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -116,4 +116,14 @@
     <dimen name="dialog_member_action_layout_marginTop">10dp</dimen>
     <dimen name="dialog_member_action_layout_padding">10dp</dimen>
     <dimen name="dialog_member_action_layout_text_size">16dp</dimen>
+
+    <!--Card Details Activity-->
+    <dimen name="card_details_content_padding">16dp</dimen>
+    <dimen name="card_details_cv_card_name_marginBottom">16dp</dimen>
+    <dimen name="card_details_cv_content_padding">16dp</dimen>
+    <dimen name="card_details_label_text_size">14dp</dimen>
+    <dimen name="card_details_value_marginTop">5dp</dimen>
+    <dimen name="card_details_value_padding">10dp</dimen>
+    <dimen name="card_details_members_label_marginTop">15dp</dimen>
+    <dimen name="card_details_update_btn_marginTop">30dp</dimen>
 </resources>
