--- a/app/src/main/res/layout/item_members.xml
+++ b/app/src/main/res/layout/item_members.xml
@@ -45,6 +45,15 @@
                 android:layout_height="wrap_content"/>
 
         </LinearLayout>
+        
+        <ImageView
+            android:id="@+id/iv_selected_member"
+            android:layout_gravity="center_vertical|end"
+            android:layout_marginEnd="@dimen/item_label_color_selected_image_marginEnd"
+            android:src="@drawable/ic_white_done"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
