--- a/app/src/main/res/layout/dialog_list.xml
+++ b/app/src/main/res/layout/dialog_list.xml
@@ -21,7 +21,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/tv_title_selected_color"
+                android:id="@+id/tv_title"
                 android:padding="@dimen/dialog_list_title_padding"
                 android:textColor="@color/primary_text_color"
                 android:textSize="@dimen/dialog_list_title_text_size"
