--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -136,4 +136,6 @@
     <dimen name="dialog_list_title_text_size">18dp</dimen>
     <dimen name="dialog_list_divider_height">1dp</dimen>
     <dimen name="dialog_list_marginBottom">3dp</dimen>
+
+    <dimen name="item_selected_member_image_size">45dp</dimen>
 </resources>
